[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Road.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 70, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 1.0
flatness = 0.0
gravity = Vector3( 0, 300, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 1.0
radial_accel = 2.0
radial_accel_random = 1.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 5.0
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Emission Shape", "Gravity", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Spread", "Trail" ]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Obstl = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -480.0
margin_right = 300.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Margin" ]

[node name="StarsLeft" type="Particles2D" parent="Background" index="0"]

position = Vector2( 70, 0 )
emitting = true
amount = 100
lifetime = 2.55
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( 0, 0, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform" ]

[node name="StarsRight" type="Particles2D" parent="Background" index="1"]

position = Vector2( 530, 0 )
emitting = true
amount = 100
lifetime = 2.55
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.4
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( 0, 0, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform" ]

[node name="Road" parent="." index="1" instance=ExtResource( 3 )]

[node name="Panel" type="Panel" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -70.0
margin_right = 260.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Description" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.0
margin_top = -50.0
margin_right = 260.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "You wake up somewhere in intergalactic space.
The only way back to Earth is this strange rainbow road.
You must"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Start" type="Button" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 43.0
margin_right = 101.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RUN OUT OF SPACE!"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Player" parent="." index="5" instance=ExtResource( 5 )]

visible = false
z_index = 100
_sections_unfolded = [ "Transform" ]

[node name="Debug" type="Label" parent="." index="6"]

visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 199.0
margin_top = -50.0
margin_right = 239.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpawnTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="pressed" from="Start" to="." method="new_game"]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


